Update: font color

--- a/tempConvert/templates/celsius.html
+++ b/tempConvert/templates/celsius.html
@@ -19,7 +19,7 @@
 
 {% block result %}
     {% if fahrenheit %}
-        Fahrenheit is {{ fahrenheit }} degrees!
+        {{ celsius }} <span class="celsius">Celsius</span>  is {{ fahrenheit }} <span class="fahrenheit">Fahrenheit</span>!
     {% else %}
     {% endif %}
 {% endblock%}
